--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -857,12 +857,9 @@ Enthält alle relevanten Informationen, die als Parameter mit dem Event IMUDataR
 
 
 \section{Klassenbeschreibung ViewModel}
-\begin{minipage}[t]{0.7\textwidth}
-	\subsection{Abstract Class BaseModeViewModel} 
-\end{minipage}
-\begin{minipage}[c]{0.3\textwidth}
-	\includegraphics[width=\textwidth]{bilder/ViewModelKlassen/BaseModeViewModel}
-\end{minipage}
+\subsection{Abstract Class BaseModeViewModel} 
+\includegraphics{bilder/ViewModelKlassen/BaseModeViewModel}
+
 \paragraph{Klassenbeschreibung:}
 Die abstrakte Klasse IBaseModeViewModel hält die Commands für Buttonklicks, die in jedem ViewModel der einzelnen Modi benötigt werden. Die Methoden die von den Commands aufgerufen werden und die Event Methode werden als abstrakt deklariert und in den Unterklassen implementiert. Die CheckConnection Methode wird beim Starten eines Vorgangs aufgerufen und ist bereits implementiert.
 \paragraph{Attribute:}
@@ -878,12 +875,11 @@ Die abstrakte Klasse IBaseModeViewModel hält die Commands für Buttonklicks, di
 	\item[+] \textbf{CheckConnection(): void} \\ Methode, die vom statischen PopUpViewModel den Verbindungsstatus abfragt und bei Bedarf eine Verbindung mit den \Gls{Earables} herstellt.
 \end{itemize}
 
-\begin{minipage}[b]{0.7\textwidth}
+
 	\subsection{Class StepModeViewModel}
-\end{minipage}
-\begin{minipage}[c]{0.3\textwidth}
-	\includegraphics[width=\textwidth]{bilder/ViewModelKlassen/StepModeViewModel.png}
-\end{minipage}
+
+	\includegraphics{bilder/ViewModelKlassen/StepModeViewModel.png}
+
 \paragraph{Klassenbeschreibung:}
 Die Klasse StepModeViewModel erbt von der abstrakten Klasse BaseModeViewModel, enthält die Logik des Stepmodes  und hält Attribute die per Databinding an die Viewklassen StepModePage und StepModeActivePage gebunden sind. 
 \paragraph{Attribute:}
@@ -912,12 +908,11 @@ Die Klasse StepModeViewModel erbt von der abstrakten Klasse BaseModeViewModel, e
 	\item[$-$] \textbf{ShowPopUp(): void} \\ Zeigt das PopUp mit den gelaufenen Schritten und der Distanz asynchron an, wegklickbar mit einem Button.
 \end{itemize}
 
-\begin{minipage}[t]{0.7\textwidth}
+
 	\subsection{Class CountModeViewModel}
-\end{minipage}
-\begin{minipage}[c]{0.3\textwidth}
-	\includegraphics[width=\textwidth]{bilder/ViewModelKlassen/CountModeViewModel}
-\end{minipage}
+
+	\includegraphics{bilder/ViewModelKlassen/CountModeViewModel}
+
 \paragraph{Klassenbeschreibung:}
 Die Klasse CountModeViewModel erbt von der abstrakten Klasse BaseModeViewModel, enthält die Logik des Countmodes und hält Attribute die per Databinding an die Viewklassen CountModePage und CountModeActivePage gebunden sind.
 \paragraph{Attribute:}
@@ -945,12 +940,11 @@ Die Klasse CountModeViewModel erbt von der abstrakten Klasse BaseModeViewModel, 
 \end{itemize}
 
 
-\begin{minipage}[t]{0.7\textwidth}
+
 	\subsection{Class ListenAndPerformViewModel}
-\end{minipage}
-\begin{minipage}[c]{0.3\textwidth}
-	\includegraphics[width=\textwidth]{bilder/ViewModelKlassen/ListenAndPerformViewModel}
-\end{minipage}
+
+	\includegraphics{bilder/ViewModelKlassen/ListenAndPerformViewModel}
+
 \paragraph{Klassenbeschreibung:}
 Die Klasse ListenAndPerformViewModel erbt von der abstrakten Klasse BaseModeViewModel, enthält die Logik von Listen\&Perform und hält Attribute die per Databinding an die Viewklassen CountModePage und CountModeActivePage gebunden sind.  Sie implementiert die INotifyPropertyChanged Schnittstelle, um das Erstellen eines Trainingsablaufplans durch den Benutzer in der zugehörigen Viewklasse anzeigen zu können.
 \paragraph{Attribute:}
@@ -984,15 +978,11 @@ Die Klasse ListenAndPerformViewModel erbt von der abstrakten Klasse BaseModeView
 	\item[+] \textbf{ OnActivityDone(sender: object, EventArgs.Empty)} \\ Event Methode, die von der Aktivität bei Erkennung der Ausführung von einer Wiederholung aufgerufen wird. Sie erhöht den jeweiligen Counter um 1.  
 	\item[$-$] \textbf{ShowPopUp(): void} \\ Zeigt das PopUp mit dem Vorgangsresultat asynchron an, wegklickbar mit einem Button. 
 	\item[$-$] \textbf{SpeakNextActivity(): void} \\ Liest die nächste Aktivität der ActivityList sowie seine Anzahl asynchron vor. 
-	\item[$-$] \textbf{DoActivity(): void} \\ Das ViewModel registriert seine seine OnActivityDone Event Methode bei der aktuellen Activity der ActivityList. Liest die Activity vor und startet den Timer. Nach Erkennung der vorher festgelegten Anzahl Wiederholungen, meldet das ViewModel seine OnActivityDone Methode ab und zählt den entsprechenden ResultCounter um die ausgeführte Anzahl hoch. 
+	\item[$-$] \textbf{DoActivity(): void} \\ Das ViewModel registriert seine seine OnActivityDone Event Methode bei der aktuellen Activity der ActivityList. Liest die Activity vor und startet den Timer. Nach Erkennung der vorher festgelegten Anzahl Wiederholungen, meldet das ViewModel seine OnActivityDone Methode ab und zählt den entsprechenden ResultCounter um die ausgeführte Anzahl hoch. \\
 \end{itemize}
 
-\begin{minipage}[t]{0.7\textwidth}
 	\subsection{Class MusicModeViewModel}
-\end{minipage}
-\begin{minipage}[c]{0.3\textwidth}
-	\includegraphics[width=\textwidth]{bilder/ViewModelKlassen/MusicModeViewModel}
-\end{minipage}
+	\includegraphics{bilder/ViewModelKlassen/MusicModeViewModel}
 \paragraph{Klassenbeschreibung:}
 Die Klasse MusicModeViewModel erbt von der abstrakten Klasse BaseModeViewModel und enthält die Logik des Musicmodes.
 \paragraph{Attribute:}
@@ -1010,12 +1000,9 @@ Die Klasse MusicModeViewModel erbt von der abstrakten Klasse BaseModeViewModel u
 	\item[+] \textbf{RestartMusic(): void} \\ Wird von OnActivityDone aufgerufen wenn der Nutzer weiter läuft. Spielt die Musik weiter ab.
 \end{itemize}
 
-\begin{minipage}[t]{0.7\textwidth}
 	\subsection{Class DataOverviewViewModel}
-\end{minipage}
-\begin{minipage}[c]{0.3\textwidth}
-	\includegraphics[width=\textwidth]{bilder/ViewModelKlassen/DataOverviewViewModel}
-\end{minipage}
+
+	\includegraphics[width=0.5\linewidth]{bilder/ViewModelKlassen/DataOverviewViewModel.png}
 
 \paragraph{Klassenbeschreibung:}
 Das DataOverviewViewModel läd die Trainingsdaten des Nutzers über den Datenbank Service und bindet diese an die ListView \textit{contentListView} der DataOverviewPage.
@@ -1056,13 +1043,9 @@ Die Commands werden an die entsprechenden Buttons im View gekoppelt und lösen d
     \item[$-$] \textbf{deleteClicked(): void}\\Zeigt einen Warning-Dialog an, ob man wirklich alle Vorgangsdaten löschen will. Daraufhin wird bei Bestätigung in IDatabaseConnection deleteTrainingData aufgerufen.
 \end{itemize} 
 
-\begin{minipage}[b]{0.7\textwidth}
-
 	\subsection{Class SettingsViewModel}
-\end{minipage}
-\begin{minipage}[c]{0.3\textwidth}
-	\includegraphics[width=\textwidth]{bilder/ViewModelKlassen/SettingsViewModel.png}
-\end{minipage}
+
+	\includegraphics{bilder/ViewModelKlassen/SettingsViewModel.png}
 \paragraph{Klassenbeschreibung:}
 Die Klasse SettingsViewModel enthält die Logik der SettingsPage. Sie erbt von INotifyPropertyChanged und verwendet für das Speichern der Einstellungen einen Command. Außerdem holt sie sich vom SettingsService alle aktuellen Einstellungen.
 \paragraph{Attribute:}
