--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -1259,13 +1259,13 @@ Die Klasse stellt die komplette Ansicht des Musicmodes dar. Beim Starten des Mus
 \paragraph{Attribute:}
 	\begin{itemize}
 	\item[+] \textbf{MusicMode: Label} \\ Anzeige des Modusnamen MusicMode.
-	\item[+] \textbf{TwoWayButton: Label} \\ Button um den Musikvorgang zu Starten/Stoppen. Feuert beim Starten/Stoppen den StartActivityCommand und den StopActivityCommand respektive.
+	\item[+] \textbf{TwoWayButton: Button} \\ Button um den Musikvorgang zu Starten/Stoppen. Feuert beim Starten/Stoppen den StartActivityCommand und den StopActivityCommand respektive.
 	\end{itemize}
 
 	\begin{minipage}[t]{0.7\textwidth}	
 		\subsection{Class DataOverviewPage}
 	\end{minipage}
-	\begin{minipage}[c]{0.3\textwidth}
+	\begin{minipage}[c]{0.4\textwidth}
 		\includegraphics[width=\textwidth]{bilder/ViewKlassen/DataOverviewPage}
 	\end{minipage}
 		\paragraph{Klassenbeschreibung:}
@@ -1273,8 +1273,8 @@ Die Klasse stellt die komplette Ansicht des Musicmodes dar. Beim Starten des Mus
 		Die Daten werden dabei vom DataOverviewViewModel per Data-Binding bereit gestellt.
 		\paragraph{Attribute:}
 		\begin{itemize}
-			\item[+] \textbf{ContentListView: ListView}
-			\item[+] \textbf{BindingContext: DataOverviewViewModel} 
+			\item[+] \textbf{ContentListView: ListView}\\Zeigt die Trainingsdaten an. 
+			\item[+] \textbf{BindingContext: DataOverviewViewModel}\\Attribut zu dem zugehörigen ViewModel.
 		\end{itemize}
 
 	
