--- a/Entwurf/Entwurfsdokument/Glossar.tex
+++ b/Entwurf/Entwurfsdokument/Glossar.tex
@@ -14,14 +14,14 @@
 \newglossaryentry{Datenbank}{name={Datenbank},
 	description={Die Datenbank speichert die Trainingsdaten in Form von DBEntries. Dabei wird die Datenbank von dem Plugin SQLite benutzt.}}
 \newglossaryentry{SQLite}{name={SQLite-net-pcl},
-	description={SQLite-net-pcl basiert auf dem PlugIn SQLite und ist eine portable Version für die Arbeit mit einer SQLite Datenbank. Dabei ist SQLite eine Erweiterung, mit der man lokale Datenbanken ansprechen und verwalten kann. Dabei bietet die Erweiterung eine lokale Datenbank platformunabhängig gleich anzusprechen. Diese Erweiterung wird für die Speicherung der Trainingsdaten benutz}}
+	description={SQLite-net-pcl basiert auf dem PlugIn SQLite und ist eine portable Version für die Arbeit mit einer SQLite Datenbank. Dabei ist SQLite eine Erweiterung, mit der man lokale Datenbanken ansprechen und verwalten kann. Dabei bietet die Erweiterung eine lokale Datenbank plattformunabhängig gleich anzusprechen. Diese Erweiterung wird für die Speicherung der Trainingsdaten benutz}}
 \newglossaryentry{CSV}{name={CSV},
 	description={CSV steht für "Comma-Seperated-Value" ein Dateityp, bei dem die Attribute durch ein Komma getrennt werden. Eine Zeile bildet dabei immer einen Eintrag ab. Das Format ist human-readable und veränderbar.}}
 \newglossaryentry{Rg.Plugins.Popup}{name={Rg.Plugins.Popup},
 	description={Rg.Plugins.Popup ist eine Erweiterung (Plugin), welche es einem ermöglicht Pop-up Fenster zu erstellen und anzuzeigen. Dabei ist das Plugin über den Pluginmanager 'NuGet' einbindbar.}}
 \newglossaryentry{DependencyInjection}{name={Microsoft.Extensions.DependencyInjection},
-	description={Microsoft.Extensions.DependencyInjection ist eine Erweiterung, welches ermöglicht Komponenten als Services zu registrieren und sie somit abgekapselt und modularer zu betrachten. Mit Klassen, wie der ServiceCollection, oder dem ServiceProvicer, bietet die Erweiterung Microsoft.Extensions.DependencyInjection das Framework.}}
-\newglossaryentry{NuGet}{name={NuGet},description={NuGet ist ein Plugin-manager für Visual Studio. Dieser ermöglicht es einem einfach neue Erweiterungen dem Projekt hinzuzufügen. Er kümmert sich um die Kompabitlität und bietet ein Verzeichnis der unterschiedlichen Plug-ins.}}
+	description={Microsoft.Extensions.DependencyInjection ist eine Erweiterung, welches ermöglicht Komponenten als Services zu registrieren und sie somit abgekapselt und modularer zu betrachten. Mit Klassen, wie der ServiceCollection, oder dem ServiceProvider, bietet die Erweiterung Microsoft.Extensions.DependencyInjection das Framework.}}
+\newglossaryentry{NuGet}{name={NuGet},description={NuGet ist ein Plugin-manager für Visual Studio. Dieser ermöglicht es einem einfach neue Erweiterungen dem Projekt hinzuzufügen. Er kümmert sich um die Kompatibilität und bietet ein Verzeichnis der unterschiedlichen Plug-ins.}}
 \newglossaryentry{Bluetooth LE Plugin}{name={Bluetooth LE Plugin for Xamarin},description={Diese Erweiterung ermöglicht es die Verbindung mit den \Gls{Earables} herzustellen. Zudem wird die Kommunikation zwischen Device und \Gls{Earables} geregelt. Von dieser Erweiterung erhalten wir die \Gls{IMU}-Daten.}}
 \newglossaryentry{Xamarin.Essentials}{name={Xamarin.Essentials},description={Die Erweiterung Xamarin.Essentials ermöglicht einem, Devicespezifische Services anzusprechen. Benutzt wird hiervon die Funktion TextToSpeech. }}
 \newglossaryentry{Xamarin.Plugin.Filepicker}{name={Xamarin.Plugin.Filepicker},description={Die Erweiterung Xamarin.Plugin.Filepicker ergänzt die Funktionalität eines Dateiauswähler. Mit diesem kann man in den Dateimanager des Devices und Dateien auswählen. Gebraucht wird dies beim Importieren und Exportieren der Trainingsdaten.}}
